Perkin-UAT/force-app/main/default/objects/Deal_Desk__c/Deal_Desk__c.object-meta.xml
<CustomObject>
    <label>Deal Desk</label>
    <nameField>
        <displayFormat>DD-{00000000}</displayFormat>
        <label>Deal Desk No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deal Desk</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>