Perkin-UAT/force-app/main/default/objects/Deal_Desk__c/fields/Approver_s_Comments__c.field-meta.xml
<CustomField>
    <fullName>Approver_s_Comments__c</fullName>
    <label>Approver&#39;s Comments</label>
    <type>TextArea</type>
</CustomField>