Perkin-UAT/force-app/main/default/objects/Deal_Desk__c/fields/Cancelled_For__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_For__c</fullName>
    <label>Cancelled For</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>