Perkin-UAT/force-app/main/default/objects/Deal_Desk__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>