Perkin-UAT/force-app/main/default/objects/Deal_Desk__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Deal Desk</relationshipLabel>
    <relationshipName>Deal_Desk</relationshipName>
    <type>Lookup</type>
</CustomField>