Perkin-UAT/force-app/main/default/objects/Deal_Desk__c/fields/Opportunity_Owner_Manager__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner_Manager__c</fullName>
    <label>Opportunity Owner Manager</label>
    <type>Email</type>
</CustomField>