Perkin-UAT/force-app/main/default/objects/Deal_Desk__c/fields/Request_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Request_Cancelled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cancel Request</label>
    <type>Checkbox</type>
</CustomField>