Perkin-UAT/force-app/main/default/objects/Deal_Desk__c/fields/Request_For__c.field-meta.xml
<CustomField>
    <fullName>Request_For__c</fullName>
    <description>This field describes the options on what a deal desk is requested for (Source: RITM0099886)</description>
    <inlineHelpText>This field describes the options on what a deal desk is requested for .</inlineHelpText>
    <label>Request For</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Deal_Desk_Request_For</valueSetName>
    </valueSet>
</CustomField>