Perkin-UAT/force-app/main/default/objects/Deal_Desk__c/validationRules/Enable_Cancelled_For.validationRule-meta.xml
<ValidationRule>
    <fullName>Enable_Cancelled_For</fullName>
    <active>true</active>
    <errorConditionFormula>AND($Permission.BD_Bypass_Automation != TRUE, ISCHANGED(Request_Cancelled__c), Request_Cancelled__c = TRUE ,ISBLANK(Cancelled_For__c))</errorConditionFormula>
    <errorDisplayField>Cancelled_For__c</errorDisplayField>
    <errorMessage>Please provide a note on cancellation of the request</errorMessage>
</ValidationRule>