Perkin-UAT/force-app/main/default/objects/Deal_Desk__c/validationRules/Mandate_Notes_for_Others_Option.validationRule-meta.xml
<ValidationRule>
    <fullName>Mandate_Notes_for_Others_Option</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
$Permission.BD_Bypass_Automation != TRUE,
INCLUDES(Request_For__c, &#39;Other&#39;),
ISBLANK(Description__c)
)</errorConditionFormula>
    <errorMessage>Please fill the Notes, since you&#39;ve selected &#39;Others&#39; option in the Request For field</errorMessage>
</ValidationRule>