Perkin-UAT/force-app/main/default/objects/Deal_Desk__c/validationRules/Mandate_Request_For_field.validationRule-meta.xml
<ValidationRule>
    <fullName>Mandate_Request_For_field</fullName>
    <active>true</active>
    <errorConditionFormula>$Permission.BD_Bypass_Automation != TRUE
&amp;&amp; ISBLANK(Request_For__c)</errorConditionFormula>
    <errorMessage>Please fill &#39;Request For&#39; field</errorMessage>
</ValidationRule>